Fix tag icon visible for event even if there is no tag

--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -59,8 +59,12 @@
     -fx-graphic:url(../images/eventBig.png);
 }
 
-#from, #to{
-    -fx-graphic:url(../images/datetime.png);
+#from{
+    -fx-graphic:url(../images/start.png);
+}
+
+#to{
+    -fx-graphic:url(../images/end.png);
 }
 
 #description{
